plugins {
    id 'java-library'
    id 'jacoco'
    id 'maven-publish'
    id 'io.spring.dependency-management' version '1.1.5'
}

group 'com.github.hmcts'
version System.getenv('RELEASE_VERSION') ?: "DEV-SNAPSHOT-${new Date().format('yyyyMMdd-HHmmss')}"

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenLocal()
    mavenCentral()
    maven { url "https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1" }
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.boot:spring-boot-dependencies:3.5.16"
        mavenBom "com.fasterxml.jackson:jackson-bom:${jacksonVersion}"
    }
    dependencies {
        dependency 'org.springframework.security:spring-security-crypto:6.5.11'
        dependency 'commons-fileupload:commons-fileupload:1.6.0'
        dependency 'org.apache.httpcomponents:httpclient:4.5.14'
        dependency 'org.apache.logging.log4j:log4j-core:2.26.1'
        dependency 'com.nimbusds:nimbus-jose-jwt:10.9.1'
        dependency 'net.minidev:json-smart:2.5.2'
        dependency 'com.squareup.okhttp3:logging-interceptor:4.12.0'
        dependency 'com.squareup.okhttp3:okhttp:4.12.0'
        dependency 'com.squareup.okhttp3:okhttp-urlconnection:4.12.0'
        dependency 'com.squareup.okio:okio:3.18.0'
        dependency 'org.bouncycastle:bcprov-jdk15on:1.70'
        // CVE-2026-42198, CVE-2026-54291 - override above the Spring Boot BOM
        dependency 'org.postgresql:postgresql:42.7.13'
        dependencySet(group: 'io.netty', version: '4.2.16.Final') {
            entry 'netty-buffer'
            entry 'netty-codec'
            entry 'netty-codec-dns'
            entry 'netty-codec-http'
            entry 'netty-codec-http2'
            entry 'netty-codec-socks'
            entry 'netty-common'
            entry 'netty-handler'
            entry 'netty-handler-proxy'
            entry 'netty-resolver'
            entry 'netty-resolver-dns'
            entry 'netty-resolver-dns-classes-macos'
            entry 'netty-resolver-dns-native-macos'
            entry 'netty-transport'
            entry 'netty-transport-native-epoll'
            entry 'netty-transport-native-kqueue'
            entry 'netty-transport-native-unix-common'
            entry 'netty-transport-classes-epoll'
            entry 'netty-transport-classes-kqueue'
        }
    }
}

tasks.register('sourcesJar', Jar) {
    dependsOn classes
    archiveClassifier.set("sources")
    from sourceSets.main.allSource
}

tasks.register('javadocJar', Jar) {
    dependsOn javadoc
    archiveClassifier.set("javadoc")
    from javadoc.destinationDir
}

artifacts {
    archives sourcesJar
    archives javadocJar
}

publishing {
    publications {
        Main(MavenPublication) {
            from components.java
            artifact sourcesJar
            artifact javadocJar
            groupId project.group
            artifactId 'et-shared'
            version project.version
        }
    }

    repositories {
        maven {
            name = "AzureArtifacts"
            url = uri("https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1")
            credentials {
                username = System.getenv("AZURE_DEVOPS_ARTIFACT_USERNAME")
                password = System.getenv("AZURE_DEVOPS_ARTIFACT_TOKEN")
            }
        }
    }
}

dependencies {
    api group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '5.3.4'
    api group: 'org.apache.poi', name: 'poi-ooxml', version: '5.4.1'
    api group: 'org.elasticsearch', name: 'elasticsearch', version: '9.2.4'

    implementation group: 'com.github.hmcts', name: 'core-case-data-store-client', version: '4.9.2'
    implementation group: 'uk.gov.dwp.regex', name: 'postcode-validation', version: '1.1.0'
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.18.0'
    implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.5.0'
    implementation group: 'com.google.guava', name: 'guava', version: '33.6.0-jre'
    implementation group: 'org.apache.tika', name: 'tika-core', version: '3.3.2'
    implementation group: 'org.apache.pdfbox', name: 'pdfbox', version: '3.0.8'

    implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: '6.1.9'
    implementation group: 'com.github.hmcts.java-logging', name: 'logging-appinsights', version: '6.1.9'
    implementation group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '8.0'
    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.26.1'
    implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.26.1'
    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.5.38'
    implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.5.38'
    implementation group: 'ch.qos.logback', name: 'logback-access', version: '1.5.38'
    implementation group: 'org.slf4j', name: 'slf4j-ext', version: '2.0.17'

    implementation group: 'com.google.code.gson', name: 'gson', version: '2.13.1'
    implementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '7.15.0'

    implementation 'org.springframework:spring-web'
    implementation 'org.springframework:spring-context'
    implementation 'org.springframework:spring-webmvc'
    implementation 'org.aspectj:aspectjrt'
    implementation 'org.aspectj:aspectjweaver'
    implementation 'jakarta.annotation:jakarta.annotation-api'

    implementation group: 'jakarta.validation', name: 'jakarta.validation-api', version: '3.1.1'
    implementation group: 'org.hibernate.validator', name: 'hibernate-validator', version: '8.0.4.Final'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: jacksonVersion
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: jacksonAnnotationsVersion
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: jacksonVersion
    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: jacksonVersion
    implementation group: 'org.springframework', name: 'spring-core'

    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.46'
    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.46'
    testCompileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.46'
    testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.46'

    testImplementation(platform('org.junit:junit-bom:5.11.4'))
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.11.4'
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.11.4'
    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.11.4'
    testRuntimeOnly group: 'org.junit.platform', name: 'junit-platform-commons', version: '1.11.4'
    testRuntimeOnly group: 'org.junit.vintage', name: 'junit-vintage-engine', version: '5.11.4'
    testImplementation group: 'junit', name: 'junit', version: '4.13.2'
    testImplementation group: 'org.hamcrest', name: 'hamcrest', version: '3.0'
    testImplementation group: 'io.rest-assured', name: 'rest-assured', version: '5.5.7'
    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.27.7'
    testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.19.0'
    testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '5.19.0'
    testImplementation group: 'org.springframework', name: 'spring-test'
    testImplementation group: 'pl.pragmatists', name: 'JUnitParams', version: '1.1.1'
}

configurations.configureEach {
    resolutionStrategy.eachDependency { details ->
        if (details.requested.group.startsWith("com.fasterxml.jackson")) {
            if (details.requested.name == 'jackson-annotations') {
                details.useVersion("$jacksonAnnotationsVersion")
            } else {
                details.useVersion("$jacksonVersion")
            }
        }
        if (details.requested.group == "tools.jackson.core") {
            // CVE-2026-54512, CVE-2026-54513, CVE-2026-54514, CVE-2026-54515,
            // CVE-2026-54516, CVE-2026-54517, CVE-2026-54518 - upgrade Jackson 3.x
            details.useVersion("$jacksonV3Version")
        }
        if (details.requested.group == "org.apache.tomcat.embed"
            && ["tomcat-embed-core", "tomcat-embed-websocket"].contains(details.requested.name)) {
            details.useVersion("10.1.57")
        }
        // CVE-2026-53914 - latest stable stdlib; runtime transitive dep only (see OWASP suppression)
        if (details.requested.group == "org.jetbrains.kotlin"
            && details.requested.name.startsWith("kotlin-stdlib")) {
            details.useVersion("2.3.21")
        }
    }
    resolutionStrategy.force(
        'commons-fileupload:commons-fileupload:1.6.0',
        'org.apache.httpcomponents:httpclient:4.5.14',
        'org.apache.logging.log4j:log4j-core:2.26.1',
        'com.nimbusds:nimbus-jose-jwt:10.9.1',
        'net.minidev:json-smart:2.5.2',
        'com.squareup.okhttp3:logging-interceptor:4.12.0',
        'com.squareup.okhttp3:okhttp:4.12.0',
        'com.squareup.okhttp3:okhttp-urlconnection:4.12.0',
        'com.squareup.okio:okio:3.18.0',
        // CVE-2026-53914 - latest stable stdlib; runtime transitive dep only (see OWASP suppression)
        'org.jetbrains.kotlin:kotlin-stdlib:2.3.21',
        'org.jetbrains.kotlin:kotlin-stdlib-jdk7:2.3.21',
        'org.jetbrains.kotlin:kotlin-stdlib-jdk8:2.3.21',
        'org.bouncycastle:bcprov-jdk15on:1.70',
        'io.netty:netty-buffer:4.2.16.Final',
        'io.netty:netty-codec:4.2.16.Final',
        'io.netty:netty-codec-dns:4.2.16.Final',
        'io.netty:netty-codec-http:4.2.16.Final',
        'io.netty:netty-codec-http2:4.2.16.Final',
        'io.netty:netty-codec-socks:4.2.16.Final',
        'io.netty:netty-common:4.2.16.Final',
        'io.netty:netty-handler:4.2.16.Final',
        'io.netty:netty-handler-proxy:4.2.16.Final',
        'io.netty:netty-resolver:4.2.16.Final',
        'io.netty:netty-resolver-dns:4.2.16.Final',
        'io.netty:netty-resolver-dns-classes-macos:4.2.16.Final',
        'io.netty:netty-resolver-dns-native-macos:4.2.16.Final',
        'io.netty:netty-transport:4.2.16.Final',
        'io.netty:netty-transport-native-epoll:4.2.16.Final',
        'io.netty:netty-transport-native-kqueue:4.2.16.Final',
        'io.netty:netty-transport-native-unix-common:4.2.16.Final',
        'io.netty:netty-transport-classes-epoll:4.2.16.Final',
        'io.netty:netty-transport-classes-kqueue:4.2.16.Final',
        // CVE-2026-42198, CVE-2026-54291
        'org.postgresql:postgresql:42.7.13'
    )
}

jacocoTestCoverageVerification {
    dependsOn test
    violationRules {
        rule {
            limit {
                counter = 'LINE'
                value = 'COVEREDRATIO'
                minimum = 0.75
            }
        }
    }
}

check.dependsOn jacocoTestCoverageVerification

test {
    useJUnitPlatform()
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        csv.required = false
    }
}

check.dependsOn jacocoTestReport
